# AuraOS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-iso.sh  common.rs  conky.conf  picom.conf  work.md
aura-agent/: Cargo.toml
aura-agent/src/: main.rs
aura-gui/: Cargo.toml
aura-gui/src/: main.rs
aura-init/: Cargo.toml
aura-init/src/: main.rs
