[package]
name = "aura-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json"] }
evdev = { version = "0.12.1", features = ["tokio"] }
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.1", features = ["cors"] }
