[package]
name = "aura-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.2"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json"] }
arboard = "3.3.0"
image = "0.24.8"
